# paimon

./: .env.example  .gitignore  .graphifyignore  LICENSE  README.md  issue_log.md  main.py  migration-plan.md  pyproject.toml
.claude/: CLAUDE.md
docs/: aimon.md  boundaries.md  current-task.md  evolution.md  interaction.md  migration.md  permissions.md  progress.md  todo.md  world_formula.md
docs/angels/: angels.md
docs/archons/: furina.md  mavuika.md  nahida.md  raiden.md  tsar.md  tsaritsa.md  venti.md  zhongli.md
docs/foundation/: gnosis.md  irminsul.md  leyline.md  march.md  primogem.md  vision.md
docs/paimon/: paimon.md
docs/shades/: asmoday.md  istaroth.md  jonova.md  naberius.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.json
paimon/: _INDEX.md  __main__.py  bootstrap.py  config.py  log.py  session.py  state.py
paimon/angels/: __init__.py  nicole.py  parser.py  registry.py  watcher.py
paimon/archons/: __init__.py  base.py  furina.py  furina_game.py  mavuika.py  nahida.py  raiden.py  tsaritsa.py  venti.py  venti_event.py  zhongli.py
paimon/archons/furina/: __init__.py  _review.py  news.py  service.py
paimon/archons/furina_game/: __init__.py  _account.py  _battle.py  _character.py  _gacha.py  _note.py  _overview.py  _register.py  service.py
paimon/archons/venti/: __init__.py  _alert.py  _collect.py  _digest.py  _login.py  _models.py  _register.py  service.py  topic_collect.py
paimon/archons/venti_event/: __init__.py  _llm.py  _models.py  _process.py  service.py
paimon/archons/zhongli/: __init__.py  scorer.py  zhongli.py
paimon/bootstrap/: __init__.py  _handlers.py  _llm.py  _phases.py  main.py
paimon/channels/: _chunk.py  base.py
paimon/channels/qq/: __init__.py  channel.py  handlers.py  middleware.py  reply.py
paimon/channels/telegram/: __init__.py  channel.py  handlers.py  middleware.py  reply.py
paimon/channels/webui/: __init__.py  _login_html.py  _reply.py  channel.py  dashboard_html.py  feed_html.py  game_html.py  knowledge_html.py  llm_html.py  plugins_html.py  preferences_html.py  push_hub.py  render.py  (+6 more)
paimon/core/: chat.py  commands.py  intent.py  memory_classifier.py  pre_filter.py  safety.py
paimon/foundation/: bg.py  browser.py  gnosis.py  leyline.py  march.py  model_router.py  primogem.py  selfcheck.py  site_cookies.py  subscription_types.py  task_types.py  task_workspace.py
paimon/llm/: __init__.py  _chat_loop.py  anthropic.py  base.py  model.py  openai.py
paimon/morningstar/: __init__.py  _scout.py  council.py  morningstar.py  prompts.py  roles.py
paimon/shades/: __init__.py  _check_parser.py  _lifecycle.py  _plan.py  _saga.py  _task_summary.py  _verdict.py  asmoday.py  istaroth.py  jonova.py  naberius.py  pipeline.py
paimon/skill_loader/: __init__.py  apply_proposal.py  proposal_cron.py  registry.py  watcher.py
paimon/tools/: __init__.py  base.py  registry.py
scripts/: run_with_watchdog.sh
skills/architecture-design/: SKILL.md
skills/bili/: SKILL.md
skills/character/: SKILL.md
skills/check/: SKILL.md
skills/code-implementation/: SKILL.md
skills/dividend-tracker/: .gitignore  CACHE_POLICY.md  README.md  SKILL.md  main.py  requirements.txt
skills/mihoyo/: SKILL.md  main.py
skills/requirement-spec/: SKILL.md
skills/topic/: SKILL.md
skills/topic-research/: SKILL.md
skills/web-search/: README.md  SKILL.md  requirements.txt  search.py
skills/xhs/: SKILL.md
templates/: paimon.t
tools/: audio_process.py  video_process.py
(+349 files in other folders)
