[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paimon"
version = "0.1.0"
description = "个人 AI 助手系统 — 神圣规划 (AIMON)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LLM Providers
    "openai>=2.30.0",
    "anthropic>=0.87.0",

    # Config & Settings
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",

    # Channels
    "aiogram>=3.25.0",
    "qq-botpy>=1.2.1",

    # WebUI
    "aiohttp>=3.9.0",

    # Storage
    "aiosqlite>=0.20.0",

    # Utilities
    "loguru>=0.7.0",
    "telegramify-markdown>=1.1.1",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "croniter>=1.3.0",

    # 冰神 skill 热重载（FS watcher）
    "watchdog>=4.0.0",

    # Builtin skills
    # web_search skill（skills/web_search/）：HTML 搜索引擎结果解析
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    # dividend-tracker skill（skills/dividend-tracker/）：BaoStock 抓 A 股行情/股息/财务
    "baostock>=0.8.8",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # bili skill + tools/video_process + tools/audio_process：B站视频抓取 + 音视频处理
    # yt-dlp 抓 bili/youtube；imageio-ffmpeg 内置真 ffmpeg 二进制（B 站强制 V/A 分离流必须 merge）
    # ffprobe 不装：时长检测改走 yt-dlp metadata，pip install -e . 一步到位、跨平台
    "yt-dlp>=2024.0.0",
    "imageio-ffmpeg>=0.5.1",

    # 浏览器自动化（topic-research / 各登录态爬虫 skill 共用）
    # pip install -e . 后还需要：playwright install chromium
    # 钉死 1.48：1.49+ 改用 Chrome for Testing (CFT) 路径，国内 npmmirror 无镜像下载会 404
    "playwright==1.48.0",
]

[project.scripts]
paimon = "paimon.__main__:entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["paimon*"]
